deploy-k8s/depl-message-creator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-creator-app
  labels:
    app: message-creator
spec:
  replicas: 3
  selector:
    matchLabels:
      app: message-creator
  template:
    metadata:
      labels:
        app: message-creator
    spec:
      containers:
      - name: message-creator
        image: ghcr.io/{.registry}/reliable-apps/message-creator:{.tag}
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /ping
            port: 8080
        readinessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            memory: "1000Mi"
            cpu: "1000m"
          limits:
            memory: "2000Mi"
            cpu: "2000m"
