deploy-k8s/depl-message-receiver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-receiver-app
  labels:
    app: message-receiver
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: message-receiver
  template:
    metadata:
      labels:
        app: message-receiver
    spec:
      containers:
      - name: message-receiver
        image: ghcr.io/{.registry}/reliable-apps/message-receiver:{.tag}
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /ping
            port: 8080
        readinessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            memory: "400Mi"
            cpu: "500m"
          limits:
            memory: "700Mi"
            cpu: "800m"
