deploy-k8s/depl-message-sink.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-sink-app
  labels:
    app: message-sink
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: message-sink
  template:
    metadata:
      labels:
        app: message-sink
    spec:
      containers:
      - name: message-sink
        image: ghcr.io/{.registry}/reliable-apps/message-sink:{.tag}
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /ping
            port: 8080
        readinessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            memory: "250Mi"
            cpu: "200m"
          limits:
            memory: "500Mi"
            cpu: "300m"
