deploy-k8s/svc-message-creator.yaml
apiVersion: v1
kind: Service
metadata:
  name: message-creator
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: message-creator
  type: ClusterIP
