deploy-k8s/svc-message-receiver.yaml
apiVersion: v1
kind: Service
metadata:
  name: message-receiver
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: message-receiver
  type: ClusterIP
