deploy-k8s/svc-message-sink.yaml
apiVersion: v1
kind: Service
metadata:
  name: message-sink
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: message-sink
  type: ClusterIP
